--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -12,5 +12,11 @@
         <ul class="hidden-links hidden"></ul>
       </nav>
     </div>
+    <div class="language-switcher">
+      <button id="lang-toggle" class="lang-toggle-btn">
+        <span class="lang-text" data-lang="zh">中文</span>
+        <span class="lang-text" data-lang="en" style="display: none;">English</span>
+      </button>
+    </div>
   </div>
 </div>
