--- a/_layouts/page_zh.html
+++ b/_layouts/page_zh.html
@@ -9,6 +9,9 @@
     <!-- CSS -->
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
     
+    <!-- Base URL for assets -->
+    <base href="{{ site.baseurl | default: '' }}/">
+    
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="{{ '/images/favicon-32x32.png' | relative_url }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ '/images/favicon-16x16.png' | relative_url }}">
