测试中英文切换7

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -15,7 +15,7 @@
     <div class="language-switcher">
       <button id="lang-toggle" class="lang-toggle-btn">
         <span class="lang-text" data-show-when="zh">English</span>
-        <span class="lang-text" data-show-when="en" style="display: none;">中文</span>
+        <span class="lang-text" data-show-when="en">中文</span>
       </button>
     </div>
   </div>
