--- a/_sass/_language-switcher.scss
+++ b/_sass/_language-switcher.scss
@@ -1,7 +1,8 @@
 // Language switcher styles
 .language-switcher {
-  float: right;
-  margin: 0.5rem 0;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 1rem;
   
   .lang-toggle-btn {
     background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
