测试中英文切换9

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -10,9 +10,8 @@
           {% endfor %}
         </ul>
         <div class="language-switcher">
-          <button id="lang-toggle" class="lang-toggle-btn">
-            <span class="lang-text" data-show-when="zh">English</span>
-            <span class="lang-text" data-show-when="en">中文</span>
+          <button id="lang-toggle" class="lang-toggle-btn" title="切换语言/Switch Language">
+            🌐
           </button>
         </div>
         <ul class="hidden-links hidden"></ul>
