--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -9,13 +9,14 @@
             <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
           {% endfor %}
         </ul>
-        <ul class="hidden-links hidden"></ul>
+        <ul class="hidden-links hidden">
+          <li class="language-switcher">
+            <button id="lang-toggle" class="lang-toggle-btn" title="切换语言/Switch Language">
+              🌐
+            </button>
+          </li>
+        </ul>
       </nav>
-    </div>
-    <div class="language-switcher">
-      <button id="lang-toggle" class="lang-toggle-btn" title="切换语言/Switch Language">
-        🌐
-      </button>
     </div>
   </div>
 </div>
