移动端测试5

--- a/_sass/_language-switcher.scss
+++ b/_sass/_language-switcher.scss
@@ -72,7 +72,7 @@
         }
         
         .lang-text-mobile {
-          display: none !important;
+          display: none;
         }
       }
     }
